--- a/Dylan.xcodeproj/xcshareddata/xcschemes/Dylan.xcscheme
+++ b/Dylan.xcodeproj/xcshareddata/xcschemes/Dylan.xcscheme
@@ -61,6 +61,12 @@
             ReferencedContainer = "container:Dylan.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.ConcurrencyDebug 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
