--- a/Dylan.xcodeproj/xcshareddata/xcschemes/Dylan.xcscheme
+++ b/Dylan.xcodeproj/xcshareddata/xcschemes/Dylan.xcscheme
@@ -99,6 +99,16 @@
                ReferencedContainer = "container:Dylan.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "86179B5E28C50FE4006A248E"
+               BuildableName = "ValidationTests.xctest"
+               BlueprintName = "ValidationTests"
+               ReferencedContainer = "container:Dylan.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
