--- a/Dylan/Dylan.entitlements
+++ b/Dylan/Dylan.entitlements
@@ -5,7 +5,7 @@
 	<key>com.apple.developer.icloud-container-environment</key>
 	<string>Production</string>
 	<key>com.apple.developer.aps-environment</key>
-	<string>development</string>
+	<string>production</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
 		<string>iCloud.Dylan</string>
